roles/jenkins/files/ci-hibernate-v0012.css
@charset "utf-8";

body {
  background-image: url("https://docs.jboss.org/hibernate/orm/4.1/devguide/en-US/html/images/org/hibernate/bkg_gradient.png") !important;
  background-repeat: repeat-x !important;
}

#header {
  background: url("https://docs.jboss.org/hibernate/orm/4.1/devguide/en-US/html/images/org/hibernate/hibernatelogo.png") no-repeat 7px 0 !important;
  padding-top: 92px
}

#header .logo {
   display: none;
}

#header .login {
   top: 35px;
   z-index: 1000;
}

#header .login a,
#header .login a:visited {
   color: black;
}

#header .searchbox {
   padding-top: 35px;
}

footer {
 position: fixed;
}

#page-body.fixedGridLayout {
   top: 130px
}

#visible-am-button {
  top: 20px;
  z-index: 1001;
}

#header #visible-am-container.visible div#visible-am-list {
  z-index: 1002;
}

.dashboard {
  position: absolute;
  top: 180px;
}

#description a {
  float: left;
}

